k8s-cluster-configuration/applications/generalized/base/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: generalized-db
  namespace: generalized
spec:
  selector:
    app: generalized-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
