k8s-cluster-configuration/applications/generalized/base/database/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-app-only
  namespace: generalized
spec:
  podSelector:
    matchLabels:
      app: generalized-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: generalized
      ports:
        - port: 5432
